[workspace]
members = [
  'crates/unen', 
  'crates/unen_net',
]
resolver = '2'

[workspace.package]
version = '0.0.1'
edition = '2021'

# Logging
[workspace.dependencies.log]
version = '0.4.27'
[workspace.dependencies.tracing]
version = '0.1.41'
features = [
  'log',
]
[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
[workspace.dependencies.tracing-log]
version = "0.2.0"

# Error Handling
[workspace.dependencies.thiserror]
version = "2.0.14"