[workspace]
members = [
  'crates/unen',
  'crates/unen_net',
]
resolver = '2'

[workspace.package]
version = '0.0.1'
edition = '2021'
license = 'MIT'
repository = 'https://github.com/UnnamedEngine/unen'
keywords = ['unen']

# Logging
[workspace.dependencies.log]
version = '0.4.27'
[workspace.dependencies.tracing]
version = '0.1.41'
features = [
  'log',
]
[workspace.dependencies.tracing-subscriber]
version = '0.3.20'
[workspace.dependencies.tracing-log]
version = '0.2.0'

# Error Handling
[workspace.dependencies.thiserror]
version = '2.0.15'

# Algorithm
[workspace.dependencies.bincode]
version = '2.0.1'
features = [
  'serde'
]
[workspace.dependencies.crc32fast]
version = '1.5.0'
