[workspace]
members = [
  "crates/unen_net",
  "crates/unen_event",
  "crates/unen_event_derive",
  "crates/unen_core",
  "crates/unen", "crates/unen_logging", "crates/unen_runner",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/UnnamedEngine/unen"
keywords = ["unen"]

# Logging
[workspace.dependencies.log]
version = "0.4.27"
[workspace.dependencies.tracing]
version = "0.1.41"
features = [
  "log",
]
[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
[workspace.dependencies.tracing-log]
version = "0.2.0"

# Error Handling
[workspace.dependencies.thiserror]
version = "2.0.15"

# Derive
[workspace.dependencies.syn]
version = "2.0.106"
features = ["full"]
[workspace.dependencies.quote]
version = "1.0.41"
[workspace.dependencies.proc-macro2]
version = "1.0.101"

# Algorithm
[workspace.dependencies.bincode]
version = "2.0.1"
features = [
  "serde"
]
[workspace.dependencies.crc32fast]
version = "1.5.0"

# Execution
[workspace.dependencies.signal-hook]
version = "0.3.18"
