[package]
name = "unen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

# Logging
[dependencies.log]
workspace = true
[dependencies.tracing]
workspace = true
[dependencies.tracing-subscriber]
workspace = true
[dependencies.tracing-log]
workspace = true
