[package]
name = "unen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies.unen_core]
path = "../unen_core"
[dependencies.unen_event]
path = "../unen_event"
features = ["derive"]
[dependencies.unen_logging]
path = "../unen_logging"
[dependencies.unen_runner]
path = "../unen_runner"

[[example]]
name = "basic_setup"
path = "examples/basic_setup.rs"
