[package]
name = "unen_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies.unen_event]
path = "../unen_event"
features = ["derive"]

# Logging
[dependencies.log]
workspace = true
[dependencies.tracing]
workspace = true
