[package]
name = "unen_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_event = { path = "../unen_event", features = ["derive"] }
unen_runner = { path = "../unen_runner" }

log = { workspace = true }
tracing = { workspace = true }
