[package]
name = "unen_logging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies.unen_core]
path = "../unen_core"
[dependencies.unen_event]
path = "../unen_event"

# Logging
[dependencies.log]
workspace = true
[dependencies.tracing]
workspace = true
[dependencies.tracing-subscriber]
workspace = true
