[package]
name = 'unen_net'
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

# Error Handling
[dependencies.thiserror]
workspace = true

# Algorithm
[dependencies.bincode]
workspace = true
[dependencies.crc32fast]
workspace = true
