[package]
name = "unen_winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_event = { path = "../unen_event" }
unen_runner = { path = "../unen_runner" }
unen_window = { path = "../unen_window" }

log = { workspace = true }

pollster = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
